samples/_failures_safe/1761480855_5eae47_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d61a03c7.c: In function ‘main’:
./samples/SAFE/__tmp_d61a03c7.c:152:5: error: expected expression at end of input
  152 |     for (int i = 0; i <
      |     ^~~
./samples/SAFE/__tmp_d61a03c7.c:152:5: error: expected declaration or statement at end of input
